--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
     "require": {
         "php": ">=5.5.9",
         "ifsnop/mysqldump-php": "^2.4",
+        "illuminate/console": "^5.1",
+        "illuminate/filesystem": "^5.1",
         "illuminate/support": "^5.1"
     },
     "require-dev": {
