--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
     "require": {
         "php": ">=5.5.9",
         "ifsnop/mysqldump-php": "^2.4",
-        "illuminate/console": "^5.1",
-        "illuminate/filesystem": "^5.1",
-        "illuminate/support": "^5.1"
+        "illuminate/console": "^5.1|^6.0",
+        "illuminate/filesystem": "^5.1|^6.0",
+        "illuminate/support": "^5.1|^6.0"
     },
     "require-dev": {
-        "mockery/mockery": "~0.9.4|~1.0",
-        "nesbot/carbon": "~1.20",
-        "phpunit/phpunit": "~4.8|~5.4|~6.1|~7.0"
+        "mockery/mockery": "^0.9.4|^1.0",
+        "nesbot/carbon": "^1.20|^2.0",
+        "phpunit/phpunit": "^4.8|^5.4|^6.1|^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
